Fix an issue that the preview view closes unexpectedly on CWVWebView.

BUG=770619
Change-Id: I1057aad3fc466786e73204c2b12da8da8dec6afa